@@ -2,7 +2,7 @@ Source: cfengine3
 Section: admin
 Priority: optional
 Maintainer: Antonio Radici <antonio@debian.org>
-Build-Depends: debhelper (>= 7), autotools-dev, libdb-dev, libssl-dev,
+Build-Depends: debhelper (>= 7.0.50), autotools-dev, libdb-dev, libssl-dev,
  flex, bison, libpcre3-dev, dh-autoreconf
 Standards-Version: 3.9.2
 Homepage: http://www.cfengine.org/
